Bug 438362 - 2 Global Theme in Appearance in Icon View
Summary: 2 Global Theme in Appearance in Icon View
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: iconview (other bugs)
Version First Reported In: 5.22.0
Platform: PCLinuxOS Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-09 20:14 UTC by Texstar
Modified: 2021-09-12 18:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
Duplicate Global Theme Picture (187.69 KB, image/png)
2021-06-10 00:27 UTC, Texstar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Texstar 2021-06-09 20:14:19 UTC
SUMMARY
I get 2 Global Theme Entries in Appearance in Icon View

STEPS TO REPRODUCE
1. Switch systemsettings to iconview
2. Click on Appearance
3. Observe 2 Global Theme Menu Entries
Comment 1 Nate Graham 2021-06-09 23:24:13 UTC
That's odd. Cannot reproduce. Can you show a screenshot? Are you doing any downstream packaging/patching related to this?
Comment 2 Texstar 2021-06-10 00:27:38 UTC
Created attachment 139179 [details]
Duplicate Global Theme Picture
Comment 3 Texstar 2021-06-10 00:37:42 UTC
If nobody else has this issue then it must be ours to fix. I am the maintainer of the packages. There are no patches regarding this tarball. Not sure if this is related but if selecting Appearance then going back to All Settings causes the apply/cancel popup button to appear then clicking Apply crashes systemsettings. Also Quicksettings is missing in the menu. Backing this package down to 5.21.5 restores proper function.
Comment 4 Nate Graham 2021-06-10 15:30:02 UTC
Ohh, in Icon view. :( Can reproduce.

JFYI Icon view is going to be deleted sometime in the next year or two so there is very little chance of this bug being fixed.
Comment 5 Texstar 2021-06-11 09:19:55 UTC
JFYI: Everybody hates sidebar view.
Comment 6 Nate Graham 2021-09-12 18:54:17 UTC
Git commit 5fb981a81b59a8554ada61b7d1406afad53328c4 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 12/09/2021 at 18:54.
Pushed by ngraham into branch 'master'.

Don't load all subpages of a category when clicked

Only loads the main page or first page. Lets categories with many subpages load much faster.
FIXED-IN: 5.23

M  +6    -12   core/ModuleView.cpp
M  +5    -0    icons/IconMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/5fb981a81b59a8554ada61b7d1406afad53328c4