Don't load all subpages of a category when clicked

Only loads the main page or first page. Lets categories with many subpages load much faster.

BUG: 438362
FIXED-IN: 5.23